[Categories]: fixed height on smaller devices

--- a/src/components/stories/widgets/Categories.scss
+++ b/src/components/stories/widgets/Categories.scss
@@ -1,5 +1,5 @@
 @import '../../../styles/variables.scss';
-@import  '../../../styles//scrollbar.scss';
+@import '../../../styles//scrollbar.scss';
 
 .st-Categories {
 	width: 100%;
@@ -15,6 +15,10 @@
 
 	&:hover {
 		overflow-y: auto;
+	}
+
+	@media (max-width: $breakpoint-m) {
+		height: auto;
 	}
 
 	@media (max-width: $breakpoint-sm) {
